--- a/styles.css
+++ b/styles.css
@@ -214,3 +214,39 @@ nav ul li a:hover::after{
 .work:hover .layer{
     height: 100%;
 }
+
+
+/*-------------------------------contact---------------------*/
+.contact-left{
+    flex-basis: 35%;
+}
+
+.contact-right{
+    flex-basis: 60%;
+}
+
+.contact-left p{
+    margin-top: 30px;
+    color: #ffffff;
+    margin-right: 15px;
+    font-size: 25px;
+}
+
+.social-icons a {
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    color: #ababab;
+    display: inline-block;
+    transition: transform 0.5s;
+}
+
+.social-icons{
+    margin-top: 30px;
+}
+
+.social-icons a:hover{
+    color: #ff004f;
+    transform: translateY((-5px));
+}
+
