--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/color_background.png);
+    background-image: url(images/home_bg.png);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -80,7 +80,7 @@ nav ul li a:hover::after{
 }
 
 .header-text h1 span{
-    color: #0bdf60;
+    color: #f63650;
 }
 
 /*------------------about--------------------*/
